--- a/resources/sass/_publicauth.scss
+++ b/resources/sass/_publicauth.scss
@@ -22,7 +22,7 @@ $bold: 600;
   border: 1px solid $border-light-grey;
   box-shadow: 0 4px 10px 4px rgba($form-bg, 0.3);
 
-  @media(max-width: 767px) {
+  @media (max-width: 767px) {
     padding: 20px 15px;
   }
 
@@ -73,11 +73,11 @@ $bold: 600;
   .selectric {
     margin-top: 5px;
     @include border-radius(2px);
-   .label {
-     @media(max-width: 767px) {
-       font-size: 12px;
-     }
-   }
+    .label {
+      @media (max-width: 767px) {
+        font-size: 12px;
+      }
+    }
   }
 
   input,
@@ -88,10 +88,10 @@ $bold: 600;
     width: 100%;
     height: 40px;
     padding: 10px 15px;
-    margin-bottom: 10px;
+    margin-bottom: 40px;
     background: white;
     background-image: none;
-    border: 1px solid $border-light-grey;
+    border: 1px solid #e0e0e0;
     color: $font-color;
     @include border-radius(2px);
     transition: border-color 0.25s ease, box-shadow 0.25s ease;
@@ -99,6 +99,19 @@ $bold: 600;
       outline: 0;
       border-color: $main;
     }
+  }
+
+  input[type="checkbox"] {
+    display: inline-block;
+    margin-bottom: 0!important;
+    width: auto;
+    margin-right: 10px;
+    height: auto;
+    -ms-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -webkit-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    transform: scale(1.3);
   }
 
   select {
@@ -148,7 +161,7 @@ $bold: 600;
       color: $white;
     }
 
-    @media(max-width: 767px) {
+    @media (max-width: 767px) {
       font-size: 15px;
     }
   }
@@ -198,7 +211,7 @@ $bold: 600;
     background: $main-dark;
   }
 
-  @media(max-width: 767px) {
+  @media (max-width: 767px) {
     font-size: 15px;
   }
 }
@@ -220,20 +233,20 @@ $bold: 600;
 }
 
 .seller-login {
-    font-style: italic;
-    font-size: 13px;
-    display: inline-block;
-    margin-top: 5px;
-    &:hover {
-      color: $main-light;
-      text-decoration: underline;
-    }
+  font-style: italic;
+  font-size: 13px;
+  display: inline-block;
+  margin-top: 5px;
+  &:hover {
+    color: $main-light;
+    text-decoration: underline;
+  }
 }
 
 .auth-home-wrap {
   @media (max-width: 767px) {
     display: flex !important;
-    padding: 15px!important;
+    padding: 15px !important;
     &__item {
       &:first-of-type {
         display: none;
