--- a/resources/sass/_reusable.scss
+++ b/resources/sass/_reusable.scss
@@ -1,7 +1,7 @@
 .product-template {
-  -webkit-box-shadow: 13px 12px 11px -9px rgba(186, 186, 186, 1);
-  -moz-box-shadow: 13px 12px 11px -9px rgba(186, 186, 186, 1);
-  box-shadow: 13px 12px 11px -9px rgba(186, 186, 186, 1);
+  -webkit-box-shadow: 10px 10px 8px -8px rgba(204, 204, 204, 1);
+  -moz-box-shadow: 10px 10px 8px -8px rgba(204, 204, 204, 1);
+  box-shadow: 10px 10px 8px -8px rgba(204, 204, 204, 1);
   @include border-radius(2px);
   &__image {
     position: relative;
@@ -54,25 +54,40 @@
     flex-flow: row wrap;
     border: 1px solid #e0e0e0;
     border-top: 1px solid #f1f1f1;
-    padding: 5px 7px;
+    padding: 8px 8px 18px;
     margin-top: -11px;
+    .list-view-image {
+      display: none!important;
+    }
+
+    .qs-list-view {
+      display: none !important;
+    }
     div {
       &:nth-child(2) {
-        flex: 0 0 calc(90% - 20px);
+        flex: 0 0 90%;
         padding-left: 5px;
         h4 {
           font-size: 12px;
           margin-bottom: 0;
           position: relative;
-          top: 3px;
-          a {
-            color: $font-color;
-            @include transition-1;
-            white-space: nowrap;
+          line-height: 1.6em;
+          top: 7px;
+          span {
             display: inline-block;
-            overflow: hidden !important;
-            text-overflow: ellipsis;
-            width: 100%;
+            font-size: 13px;
+            color: #939393;
+            &:last-of-type {
+              color: $font-color;
+              font-weight: bold;
+            }
+          }
+          a {
+            color: $main-green-color;
+            @include transition-1;
+            line-height: 1em;
+            font-weight: bold;
+            font-size: 13px;
             &:hover {
               color: $main-green-color;
               text-decoration: none;
@@ -81,7 +96,7 @@
             &:active,
             &:focus {
               text-decoration: none;
-              color: $font-color;
+              color: $light-green-color;
             }
           }
         }
