--- a/resources/sass/_search.scss
+++ b/resources/sass/_search.scss
@@ -21,13 +21,13 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  padding: 20px 0;
+  padding: 25px 0;
   margin-top: 5px;
 
   &__sorting {
     flex: 0 0 30%;
     @media (max-width: 1199px) {
-      flex: 0 0 30%;
+      flex: 0 0 25%;
     }
 
     @media (max-width: 767px) {
@@ -128,7 +128,7 @@
     text-align: center;
 
     @media (max-width: 1199px) {
-      flex: 0 0 40%;
+      flex: 0 0 50%;
     }
 
     @media (max-width: 767px) {
@@ -151,6 +151,7 @@
       background: white;
       border: 1px solid $main-green-color;
       padding: 8px 10px;
+      height: 35px;
       cursor: pointer;
       position: relative;
       top: -1px;
@@ -168,7 +169,7 @@
       }
 
       &:nth-child(1) {
-        @include border-radius(7px 0 0 7px);
+        @include border-radius(1px 0 0 1px);
         margin-right: -4px;
         border-right: none;
       }
@@ -182,7 +183,7 @@
       }
 
       &:nth-child(3) {
-        @include border-radius(0 7px 7px 0);
+        @include border-radius(0 1px 1px 0);
         margin-left: -3px;
         border-left: 1px solid $main-green-color;
       }
@@ -202,7 +203,7 @@
     flex: 0 0 30%;
     text-align: right;
     @media (max-width: 1199px) {
-      flex: 0 0 30%;
+      flex: 0 0 25%;
     }
 
     @media (max-width: 767px) {
@@ -229,13 +230,14 @@
       background: white;
       border: 1px solid #1c6d5a;
       padding: 5px 10px;
+      height: 35px;
       cursor: pointer;
       position: relative;
       top: -1px;
       @include transition-1;
 
       &:first-of-type {
-        @include border-radius(7px 0 0 7px);
+        @include border-radius(1px 0 0 1px);
         img {
           position: relative;
           top: 1px;
@@ -243,9 +245,9 @@
       }
 
       &:last-of-type {
-        margin-left: -3px;
+        margin-left: -5px;
         border-left: none;
-        @include border-radius(0 7px 7px 0);
+        @include border-radius(0 1px 1px 0);
       }
 
       &:hover {
@@ -284,9 +286,9 @@
 
   .product-template-wrap {
     flex: 0 0 33.333%;
-    padding: 5px;
+    padding: 10px;
 
-    @media (max-width: 1199px) {
+    @media (max-width: 1300px) {
       flex: 0 0 50%;
     }
 
@@ -309,8 +311,8 @@
 .product-template-wrap-listview {
   flex: 0 0 100% !important;
   padding: 0 !important;
-  padding-bottom: 10px!important;
-  
+  padding-bottom: 15px !important;
+
   .product-template {
     box-shadow: none;
   }
@@ -325,27 +327,55 @@
     }
   }
 
+  .qs {
+    display: none;
+  }
+
+  .qs-list-view {
+    display: inline-block !important;
+    img {
+      width: 25px;
+      height: 25px;
+      top: 12px;
+      position: relative;
+      display: block;
+    }
+  }
+
+  .popover-content {
+    top: 48px !important;
+    img {
+      position: relative !important;
+      display: inline-block !important;
+      top: 8px !important;
+    }
+  }
+
   .product-template__info {
     position: relative;
-    padding: 10px 15px 10px !important;
+    padding: 5px 15px 15px !important;
     border: 1px solid #e0e0e0;
     margin-top: 0;
-    @include border-radius(2px);
+    @include border-radius(3px);
     @media (max-width: 500px) {
-      padding: 15px 15px 10px!important;
+      padding: 15px 15px 10px !important;
     }
     h4 {
       font-size: 15px !important;
+      top: 5px !important;
       @media (max-width: 500px) {
         font-size: 12px !important;
       }
       a {
         margin-bottom: 5px;
+        font-size: 15px !important;
       }
-    }
-
-    p {
-      font-size: 12px !important;
+      span {
+        &:first-of-type {
+          margin-right: 10px;
+          margin-left: 20px;
+        }
+      }
     }
 
     span {
@@ -355,16 +385,48 @@
     div {
       &:nth-child(1) {
         flex: 0 0 5%;
-        @media(max-width: 525px){
+        @media (max-width: 992px) {
+          flex: 0 0 15% !important;
+        }
+        @media (max-width: 525px) {
           padding-right: 5px;
         }
-        @media(max-width:767px){
+        @media (max-width: 767px) {
+        }
+        img {
+          float: right;
+        }
 
+        .list-view-image {
+          display: block !important;
+          float: none;
+          position: absolute;
+          left: 0;
+          top: 0;
+          bottom: 0;
+          width: 75px;
+          height: 100%;
+          object-fit: cover;
+          @media (max-width: 580px) {
+            width: 60px;
+          }
         }
       }
 
       &:nth-child(2) {
-       padding-left: 20px;
+        padding-left: 20px;
+        padding-right: 30px;
+        flex: 0 0 95% !important;
+        @media (max-width: 992px) {
+          flex: 0 0 85% !important;
+          padding-left: 0 !important;
+          span {
+            margin-left: 0;
+          }
+        }
+        @media(max-width: 479px) {
+          padding-left: 10px!important;
+        }
       }
     }
 
