--- a/resources/sass/_resets.scss
+++ b/resources/sass/_resets.scss
@@ -9,7 +9,7 @@
 body {
   font-size: 14px;
   line-height: 1.6em;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Open Sans', sans-serif;
   box-sizing: border-box;
   color: $font-color;
 }
